--- a/templates/pxeboot_ks.cfg.j2
+++ b/templates/pxeboot_ks.cfg.j2
@@ -1,10 +1,10 @@
-# Following hardening guide at https://github.com/RedHatGov/ssg-el7-kickstart
+# Following the hardening guide at https://github.com/RedHatGov/ssg-el7-kickstart
 
 #version=DEVEL
 # System authorization information
 auth --enableshadow --passalgo=sha512
 # Use network install
-url --url="ftp://{{ ftp_ipv4_address }}/pub"
+url --url="ftp://{{ ftp_server }}/pub"
 # Use text mode install
 cmdline
 # Don't run the Setup Agent on first boot
@@ -29,8 +29,8 @@ timezone --utc Etc/UTC
 # python -c 'import crypt,sys; print(crypt.crypt(sys.argv[1], crypt.mksalt(crypt.METHOD_SHA512)))' `openssl rand -base64 48`
 #
 #
-# cat ~/pfile | grub2-mkpasswd-pbkdf2 | awk '/grub.pbkdf/{print$NF}'
-bootloader --append="rhgb quiet audit=1 transparent_hugepage=never ipv6.disable=1 panic=1 {% if disable_numa==True %}numa=off{% endif %}" --location=mbr --boot-drive=sda --iscrypted --password=grub.pbkdf2.sha512.10000.5E6A65DD6305678042C96BF43DEB5211A6E77AEEC6AB35F75C37F3A73DE6796930D0FC00C68D476E0A1A15C845C8B9FEFEB2FF85CA43D69ECAB5E4B30E8F64ED.E31A344F6446642440FB70BC5DBC68EDD8FB086A257E03F3DA42A66BEC8129F4C897D5E6FC662562AF70BF0DA3C9B6E60902E7B250C33CD95EFD943CC9C8720E
+# yes `cat ~/pfile` | grub2-mkpasswd-pbkdf2 | awk '/grub.pbkdf/{print$NF}'
+bootloader --append="rhgb quiet audit=1 transparent_hugepage=never ipv6.disable=1 panic=1 {% if disable_numa==True %}numa=off{% endif %}" --location=mbr --boot-drive=sda --iscrypted --password={{ bootloader_pw }}
 
 # no root password and lock the account, only sudo is possible
 rootpw --lock
@@ -63,6 +63,9 @@ logvol /u01           --fstype xfs  --name=lv_u01     --vgname=vg1  --size=2048 
 #logvol swap                         --name=lv_swap    --vgname=vg1  --size=2016
 %include /tmp/swappart.inc
 
+# Accept the EULA
+eula --agreed
+
 reboot
 
 %packages --nobase --excludedocs
@@ -70,13 +73,15 @@ reboot
 @core --nodefaults
 openssh
 open-vm-tools
+sssd
+autofs
 cryptsetup
 dracut-fips-aesni
 fipscheck
 aide
 # CCE-27351-6 Install the screen Package
 screen
-chrony
+ksh
 libreswan
 rsyslog
 unzip
@@ -87,13 +92,17 @@ wget
 # libselinux-python
 # SCAP CONTENT
 openscap
+openscap-scanner
 openscap-utils
+scap-security-guide
 xml-common
+esc
+pam_pkcs11
 # for ansible
+ansible
 python-setuptools
 PyYAML
 python-jinja2
-{% include 'active-directory-packages.j2' %}
 # REMOVE PACKAGES
 -abrt*
 -avahi*
@@ -144,31 +153,68 @@ python-jinja2
 -redhat-support*
 -redhat-indexhtml
 -virt-what
-# oracle packages minus the X11 stuff
+-fprintd
+# oracle packages minus the X11 stuf
 binutils
 compat-libcap1
-glibc.i686
 glibc
-glibc-devel.i686
 glibc-devel
 ksh
-libaio.i686
 libaio
-libaio-devel.i686
 libaio-devel
-libgcc.i686
 libgcc
-libstdc++.i686
 libstdc++
-libstdc++-devel.i686
 libstdc++-devel
 make
-net-tools
 nfs-utils
+net-tools
+openssh
 smartmontools
 sysstat
 unixODBC
 gcc-c++
+tuned
+tuned-profiles-oracle
+# 0racle x11 packages
+libX11
+libXau
+libXi
+libXtst
+libxcb
+# GUI installer displayed weird characters without these
+dejavu-serif-fonts
+dejavu-fonts-common
+# for time synchronization
+ntp
+# Packages for SELinux
+policycoreutils
+policycoreutils-python
+selinux-policy
+selinux-policy-targeted
+libselinux-utils
+setroubleshoot-server
+setools
+setools-console
+mcstrans
+# Firerwall
+firewalld
+# Packages needed for Active Directory integration
+realmd
+samba
+samba-common
+samba-client
+sssd
+adcli
+authconfig
+samba-common
+oddjob-mkhomedir
+cifs-utils
+nfs-utils
+sssd-libwbclient
+autofs
+krb5-libs
+krb5-workstation
+pam_krb5
 %end
 
 %addon com_redhat_kdump --disable
@@ -176,7 +222,7 @@ gcc-c++
 
 %addon org_fedora_oscap
         content-type = scap-security-guide
-        profile = stig-rhel7-server-upstream
+        profile = stig-rhel7-disa
 %end
 
 %pre --interpreter=/bin/bash --erroronfail --log=/root/ks-pre.log
@@ -225,7 +271,7 @@ EOT
 /usr/bin/chmod 0440 /etc/sudoers.d/admin_conf
 
 /bin/mkdir --parents /home/admin/.ssh
-/usr/bin/wget --output-document=/home/admin/.ssh/authorized_keys ftp://{{ ftp_ipv4_address }}:/pub/authorized_keys
+/usr/bin/wget --output-document=/home/admin/.ssh/authorized_keys ftp://{{ ftp_server }}:/pub/authorized_keys
 /bin/chown --recursive ansible:ansible /home/admin/.ssh
 /bin/chmod 700 /home/admin/.ssh
 /bin/chmod 600 /home/admin/.ssh/authorized_keys
@@ -241,7 +287,7 @@ EOT
 adduser --comment "Ansible User" --system --create-home --groups sshusers ansible
 
 /bin/mkdir --parents /home/ansible/.ssh
-/usr/bin/wget --output-document=/home/ansible/.ssh/authorized_keys ftp://{{ ftp_ipv4_address }}:/pub/authorized_keys
+/usr/bin/wget --output-document=/home/ansible/.ssh/authorized_keys ftp://{{ ftp_server }}:/pub/authorized_keys
 /bin/chown --recursive ansible:ansible /home/ansible/.ssh
 /bin/chmod 700 /home/ansible/.ssh
 /bin/chmod 600 /home/ansible/.ssh/authorized_keys
@@ -256,7 +302,7 @@ EOT
 {% include 'RPM-GPG-KEY-redhat-release' %}
 
 EOT
-#/usr/bin/wget --output-document=/root/RPM-GPG-KEY-redhat-release ftp://{{ ftp_ipv4_address }}:/pub/RPM-GPG-KEY-redhat-release
+#/usr/bin/wget --output-document=/root/RPM-GPG-KEY-redhat-release ftp://{{ ftp_server }}:/pub/RPM-GPG-KEY-redhat-release
 /usr/bin/rpm --import /root/RPM-GPG-KEY-redhat-release
 
 #firewall-cmd --zone=public --remove-service=dhcpv6-client --permanent
@@ -283,11 +329,11 @@ sed -i '/^GRUB_CMDLINE_LINUX=/s/"$/ fips=1"/' /etc/default/grub
 uuid=$(findmnt -no uuid /boot)
 [[ -n $uuid ]] && sed -i "/^GRUB_CMDLINE_LINUX=/s/\"$/ boot=UUID=${uuid}\"/" /etc/default/grub
 
-/usr/bin/wget --output-document=/root/ipa-pam-configuration.sh ftp://{{ ftp_ipv4_address }}:/rhel/software/ipa-pam-configuration.sh
+/usr/bin/wget --output-document=/root/ipa-pam-configuration.sh ftp://{{ ftp_server }}:/rhel/software/ipa-pam-configuration.sh
 /usr/bin/chmod 700 /root/ipa-pam-configuration.sh
 /root/ipa-pam-configuration.sh
 
-/usr/bin/wget --output-document=/root/ssg-supplemental.sh ftp://{{ ftp_ipv4_address }}:/rhel/software/ssg-supplemental.sh
+/usr/bin/wget --output-document=/root/ssg-supplemental.sh ftp://{{ ftp_server }}:/rhel/software/ssg-supplemental.sh
 /usr/bin/chmod 700 /root/ssg-supplemental.sh
 /root/ssg-supplemental.sh
 
@@ -334,14 +380,14 @@ echo "ZONE=\"drop\"" >> /etc/sysconfig/network-scripts/ifcfg-`echo $interface`
 
 # echo "firewall --trust $interface --service=ssh --port=1521:tcp,5500:tcp" > /tmp/firewall.ks
 
-/usr/bin/wget --output-document=/root/ansible.tgz ftp://{{ ftp_ipv4_address }}:/pub/ansible.tgz
+/usr/bin/wget --output-document=/root/ansible.tgz ftp://{{ ftp_server }}:/pub/ansible.tgz
 
 # fix an anoyance with sourcing .bashrc after already logged in
 # you get a message that TMOUT is readonly, the autologout script is trying to set it again
 /usr/bin/sed -i 's/TMOUT=900/TMOUT=${TMOUT:=900}/' /etc/profile.d/autologout.sh
 
 # transfer the oracle database software
-/usr/bin/wget --output-document=/u01/{{ oracle_database.file_name }} ftp://{{ ftp_ipv4_address }}:/rhel/software/{{ oracle_database.file_name }}
+/usr/bin/wget --output-document=/u01/{{ oracle_database.file_name }} ftp://{{ ftp_server }}:/rhel/software/{{ oracle_database.file_name }}
 # record the oracle database software hash
 echo "{{ oracle_database.sha256 }}  {{ oracle_database.file_name }}" > /u01/database.sha256
 # sha256sum --check /u01/database.sha256
