--- a/templates/pxeboot_ks.cfg.j2
+++ b/templates/pxeboot_ks.cfg.j2
@@ -47,20 +47,20 @@ zerombr
 clearpart --linux --initlabel
 
 # Create primary system partitions (required for installs)
-part /boot --fstype=xfs --size=512
+part /boot --fstype=xfs --size={{ boot_size }}
 part pv.01 --grow --size=1
 
 # Create a Logical Volume Management (LVM) group (optional)
 volgroup vg1 --pesize=4096 pv.01
 
-logvol /              --fstype xfs  --name=lv_root    --vgname=vg1  --size=3072
-logvol /tmp           --fstype xfs  --name=lv_tmp     --vgname=vg1  --size=1024   --fsoptions="defaults,relatime,nodev,nosuid,noexec,discard"
-logvol /home          --fstype xfs  --name=lv_home    --vgname=vg1  --size=1024   --fsoptions="defaults,relatime,nodev,nosuid,discard"
-logvol /var           --fstype xfs  --name=lv_var     --vgname=vg1  --size=2048   --fsoptions="defaults,relatime,nodev,discard"
-logvol /var/log       --fstype xfs  --name=lv_varlog  --vgname=vg1  --size=1024   --fsoptions="defaults,relatime,nodev,nosuid,noexec,discard"
-logvol /var/log/audit --fstype xfs  --name=lv_audit   --vgname=vg1  --size=512    --fsoptions="defaults,relatime,nodev,nosuid,noexec,discard"
-logvol /u01           --fstype xfs  --name=lv_u01     --vgname=vg1  --size=2048   --fsoptions="defaults,relatime,nodev,discard"         --grow
-#logvol swap                         --name=lv_swap    --vgname=vg1  --size=2016
+logvol /              --fstype xfs  --name=lv_root    --vgname=vg1  --size={{ lv_root_size }}
+logvol /tmp           --fstype xfs  --name=lv_tmp     --vgname=vg1  --size={{ lv_tmp_size }}    --fsoptions="defaults,relatime,nodev,nosuid,noexec,discard"
+logvol /home          --fstype xfs  --name=lv_home    --vgname=vg1  --size={{ lv_home_size }}   --fsoptions="defaults,relatime,nodev,nosuid,discard"
+logvol /var           --fstype xfs  --name=lv_var     --vgname=vg1  --size={{ lv_var_size }}    --fsoptions="defaults,relatime,nodev,discard"
+logvol /var/log       --fstype xfs  --name=lv_varlog  --vgname=vg1  --size={{ lv_varlog_size }} --fsoptions="defaults,relatime,nodev,nosuid,noexec,discard"
+logvol /var/log/audit --fstype xfs  --name=lv_audit   --vgname=vg1  --size={{ lv_audit_size }}  --fsoptions="defaults,relatime,nodev,nosuid,noexec,discard"
+logvol /u01           --fstype xfs  --name=lv_u01     --vgname=vg1  --size={{ lv_u01_size }}    --fsoptions="defaults,relatime,nodev,discard"         --grow
+#logvol swap                        --name=lv_swap    --vgname=vg1  --size=2016
 %include /tmp/swappart.inc
 
 # Accept the EULA
