--- a/templates/local.repo.j2
+++ b/templates/local.repo.j2
@@ -23,7 +23,7 @@ enabled = 1
 gpgcheck = {{ gpgcheck }}
 
 [packages]
-name = Random packages without yum repos
+name = Miscellaneous rpm packages
 baseurl = {{ local_yum }}/packages
 enabled = 1
 gpgcheck = {{ gpgcheck }}
