--- a/templates/pxeboot_ks.cfg.j2
+++ b/templates/pxeboot_ks.cfg.j2
@@ -96,6 +96,7 @@ openscap
 openscap-scanner
 openscap-utils
 openssh
+openssh-server
 pam_krb5
 pam_pkcs11
 policycoreutils
@@ -162,9 +163,14 @@ zip
 -rhn-setup
 -rhnlib
 -rhnsd
+-rsh-server
 -subscription-manager
+-telnet-server
+-tftp-server
 -virt-what
+-vsftpd
 -wpa_supplicant
+-ypserv
 -yum-rhn-plugin
 %end
 
