--- a/templates/pxeboot_ks.cfg.j2
+++ b/templates/pxeboot_ks.cfg.j2
@@ -4,7 +4,7 @@
 # System authorization information
 auth --enableshadow --passalgo=sha512
 # Use network install
-url --url="ftp://{{ ftp_server }}/pub"
+url --url="ftp://{{ ftp_server_ip }}/pub"
 # Use text mode install
 cmdline
 # Don't run the Setup Agent on first boot
